k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erfgoedkijker
  labels:
    app: erfgoedkijker
spec:
  type: ClusterIP
  selector:
    app: erfgoedkijker
  ports:
    - name: http
      port: 80
      targetPort: 3000
